[package]
name = "airmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenshtein_automata = "0.2.1"
s2 = "0.0.12"
tantivy = "0.21.1"
tantivy-common = "0.6.0"
tantivy-fst = "0.4.0"
tempfile = "3.9.0"
airmail_common = { path = "../airmail_common" }
log = "0.4.20"
airmail_parser = { path = "../airmail_parser" }
