[package]
name = "airmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenshtein_automata = "0.2.1"
s2 = "0.0.12"
tantivy = "0.22.0"
tantivy-common = "0.7.0"
tantivy-fst = "0.4.0"
tempfile = "3.9.0"
log = "0.4.20"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
lru = "0.12.2"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
nix = { version = "0.27", features = ["ioctl", "mman"] }
userfaultfd = { version = "0.8.1", features = ["linux4_14", "linux5_7"] }
crossbeam = "0.8.4"
futures-util = "0.3.30"
deunicode = "1.4.3"
itertools = "0.12.1"
lingua = { version = "1.6.2", default-features = false, features = ["english", "chinese", "catalan", "arabic", "danish", "dutch", "finnish", "french", "german", "greek", "hungarian", "italian", "portuguese", "romanian", "russian", "spanish", "swedish", "tamil", "turkish"] }
unicode-segmentation = "1.11.0"
tantivy-jieba = "0.10.0"
cached = "0.48.1"
lazy_static = "1.4.0"
regex = "1.10.3"
geo = "0.27.0"
tantivy-uffd = "0.1.1"
anyhow = "1.0.86"
thiserror = "1.0.63"

[features]
invasive_logging = []
remote_index = ["tantivy/quickwit"]
