[package]
name = "airmail_import_osm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airmail = { path = "../airmail" }
airmail_indexer = { path = "../airmail_indexer" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = "0.11.2"
geo = "0.28.0"
log = "0.4.20"
osmflat = "0.1.0"
rayon = "1.8.1"
