[package]
name = "airmail_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airmail = { path = "../airmail" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rayon = "1.8.1"
serde_json = "1"
s2 = "0.0.12"
geojson = "0.24.1"
serde = { version = "1", features = ["derive"] }
airmail_common = { path = "../airmail_common" }
lazy_static = "1.4.0"
bollard = "0.15.0"
clap = { version = "4.4.18", features = ["derive"] }
futures-util = "0.3.30"
env_logger = "0.11.1"
airmail_parser = { path = "../airmail_parser" }
regex = "1.10.3"
deunicode = "1.4.2"
log = "0.4.20"
geo = "0.27.0"
rand = "0.8.5"
subprocess = "0.2.9"
rustyline = "13.0.0"
turbosm = { path = "../turbosm" }
redb = "1.5.0"

[[bin]]
name = "query"
