[package]
name = "airmail_indexer"
version = "0.1.0"
edition = "2021"
default-run = "indexer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "indexer"
path = "src/main.rs"

[[bin]]
name = "query"
path = "src/bin/query.rs"

[[bin]]
name = "merge"
path = "src/bin/merge.rs"

[lib]
name = "airmail_indexer"
path = "src/lib.rs"

[dependencies]
airmail = { path = "../airmail" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rayon = "1.8.1"
serde_json = "1"
s2 = "0.0.12"
geojson = "0.24.1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
clap = { version = "4.4.18", features = ["derive"] }
futures-util = "0.3.30"
env_logger = "0.11.1"
regex = "1.10.3"
deunicode = "1.4.2"
log = "0.4.20"
geo = "0.27.0"
rustyline = "13.0.0"
num_cpus = "1.16.0"
lru = "0.12.2"
lingua = { version = "1.6.2", default-features = false, features = [
    "english",
    "chinese",
    "catalan",
    "arabic",
    "danish",
    "dutch",
    "finnish",
    "french",
    "german",
    "greek",
    "hungarian",
    "italian",
    "portuguese",
    "romanian",
    "russian",
    "spanish",
    "swedish",
    "tamil",
    "turkish",
] }
redb = "1.5.0"
anyhow = "1.0.86"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
osmx = { version = "0.1.0" }
thiserror = "1.0.63"
rstar = { version = "0.12.0", features = ["serde"] }
geo-types = { version = "0.7.11", features = ["use-rstar_0_12"] }
bincode = { version = "1.3.3" }
geozero = { version = "0.13.0", features = ["with-geo", "with-gpkg"] }

[features]
default = ["remote_index"]
remote_index = ["airmail/remote_index"]
