[package]
name = "airmail_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
deunicode = "1.4.2"
fst = { version = "0.4.7", features = ["levenshtein"] }
hashlink = "0.9.0"
inventory = "0.3.14"
lazy_static = "1.4.0"
log = "0.4.20"
nom = "7.1.3"
test-log = "0.2.14"

[build-dependencies]
deunicode = "1.4.2"
fst = "0.4.7"
