[package]
name = "airmail_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
airmail = { path = "../airmail" }
env_logger = "0.11.1"
deunicode = "1.4.2"
log = "0.4.20"
clap = { version = "4.4.18", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.30"
tower-http = { version = "0.5.1", features = ["cors"] }
geo = "0.27.0"
anyhow = "1.0.86"
thiserror = "1.0.63"

[features]
default = ["remote_index"]
remote_index = ["airmail/remote_index"]
invasive_logging = ["airmail/invasive_logging"]
